--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,9 @@
     "jade": "1.11.0",
     "lodash": "3.10.0",
     "normalize.css": "3.0.3",
-    "react": "^0.14.0-beta2",
-    "react-dom": "^0.14.0-beta2",
+    "react": "^0.13.3",
+    "react-bootstrap": "^0.24.3",
+    "react-dom": "^0.14.0-beta3",
     "react-routing": "0.0.4",
     "source-map-support": "0.3.2",
     "superagent": "1.2.0"
