More work on the frontend to reactjs components

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,13 @@
     "express": "4.13.3",
     "fastclick": "1.0.6",
     "flux": "2.0.3",
+    "font-awesome": "^4.4.0",
     "front-matter": "1.0.0",
     "jade": "1.11.0",
     "lodash": "3.10.0",
     "normalize.css": "3.0.3",
-    "react": "^0.13.3",
-    "react-bootstrap": "^0.24.3",
-    "react-dom": "^0.14.0-beta3",
+    "react": "^0.14.0-beta2",
+    "react-dom": "^0.14.0-beta2",
     "react-routing": "0.0.4",
     "source-map-support": "0.3.2",
     "superagent": "1.2.0"
