--- a/frontend/src/components/Logo/package.json
+++ b/frontend/src/components/Logo/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Header",
+  "name": "Logo",
   "version": "0.0.0",
   "private": true,
-  "main": "./Header.js"
+  "main": "./Logo.js"
 }
