--- a/project/package.json
+++ b/project/package.json
@@ -34,5 +34,8 @@
     "url": "git://github.com/anonymous node/sails user/project.git"
   },
   "author": "anonymous node/sails user",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "barrels": "^1.5.0"
+  }
 }
