Finish register post action

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,10 +48,11 @@
     "gulp-cssnext": "^1.0.1",
     "jquery": "^1.9.1",
     "jwt-decode": "^1.1.0",
-    "kendo-ui-core": "^1.0.2",
+    "lodash": "^3.10.1",
     "object-assign": "^3.0.0",
     "react": "^0.13.3",
     "react-bootstrap": "^0.24.5",
+    "react-kendo": "^0.13.11",
     "react-mixin": "^1.7.0",
     "reqwest": "^1.1.6",
     "underscore": "^1.7.0",
