--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
     "gulp-concat-css": "^2.2.0",
     "gulp-copy": "0.0.2",
     "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.4.0",
     "gulp-util": "^3.0.6",
     "gulp-webp": "^2.3.0",
     "normalize.css": "^3.0.3",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
     "require-dir": "^0.3.0",
+    "uglify": "^0.1.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.1"
