--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,47 +3,37 @@
   "version": "0.1.0",
   "description": "frontend: ...",
   "author": "",
-  "license": "MIT",
+  "private": true,
+  "main": "./src/js/index.js",
   "devDependencies": {
-    "babelify": "^6.1.3",
-    "browserify": "^11.0.1",
-    "cssnext": "^1.8.3",
-    "gulp": "^3.8.7",
-    "gulp-concat-css": "^2.2.0",
-    "gulp-copy": "0.0.2",
-    "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.4.0",
-    "gulp-util": "^3.0.6",
-    "gulp-webp": "^2.3.0",
+    "autoprefixer-core": "^6.0.0",
+    "babel-core": "^5.8.23",
+    "babel-loader": "^5.3.2",
+    "css-loader": "^0.17.0",
+    "cssnext": "^1.8.4",
+    "cssnext-loader": "^1.0.1",
+    "file-loader": "^0.8.4",
+    "font-awesome": "^4.4.0",
+    "jsx-loader": "^0.13.2",
     "normalize.css": "^3.0.3",
+    "postcss": "^5.0.4",
+    "postcss-loader": "^0.6.0",
+    "postcss-nested": "^1.0.0",
+    "react-hot-loader": "^1.3.0",
     "react-router": "^0.13.3",
-    "reactify": "^1.1.1",
-    "require-dir": "^0.3.0",
-    "uglify": "^0.1.5",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.1"
+    "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.1",
+    "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "dev": "gulp --type dev",
-    "start": "gulp",
-    "build": "gulp build"
-  },
-  "jest": {
-    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
-    "testFileExtensions": [
-      "es6",
-      "js"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "es6"
-    ]
+    "dev": "",
+    "start": "webpack-dev-server --devtool eval --progress --colors --content-base build --hot --inline",
+    "deploy": "NODE_ENV=production webpack -p"
   },
   "dependencies": {
     "babel-eslint": "^4.0.5",
+    "babel-runtime": "^5.8.20",
     "eslint": "^1.1.0",
     "eslint-plugin-react": "^3.2.2",
     "flux": "^2.0.3",
@@ -57,6 +47,7 @@
     "react-dnd": "^1.1.5",
     "react-kendo": "^0.13.11",
     "react-mixin": "^1.7.0",
+    "react-router": "^0.13.3",
     "reqwest": "^1.1.6",
     "underscore": "^1.7.0",
     "when": "^3.7.2"
