--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "react-mixin": "^1.7.0",
     "react-router": "^0.13.3",
     "reqwest": "^1.1.6",
+    "superagent": "^1.3.0",
     "underscore": "^1.7.0",
     "when": "^3.7.2"
   }
