--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "hapi-auth-jwt": "^3.0.0",
     "joi": "^6.7.0",
     "jsonwebtoken": "^5.0.5",
+    "lodash": "^3.10.1",
     "require-all": "^1.1.0",
     "sails-postgresql": "^0.10.16",
     "underscore": "^1.8.3",
