--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,8 @@
     "boom": "^2.8.0",
     "dogwater": "^1.0.1",
     "hapi": "^10.0.0",
-    "hapi-auth-jwt": "^3.0.0",
+    "hapi-auth-bearer-simple": "^1.2.3",
     "joi": "^6.7.0",
-    "jsonwebtoken": "^5.0.5",
     "lodash": "^3.10.1",
     "require-all": "^1.1.0",
     "sails-postgresql": "^0.10.16",
