--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "dependencies": {
     "async": "^1.4.2",
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "0.8.5",
     "bluebird": "^2.10.0",
     "bookshelf": "^0.8.2",
     "boom": "^2.8.0",
