--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "dependencies": {
     "async": "^1.4.2",
-    "bcrypt": "0.8.5",
+    "bcrypt": "^0.8.5",
     "bluebird": "^2.10.0",
     "bookshelf": "^0.8.2",
     "boom": "^2.8.0",
@@ -20,5 +20,8 @@
     "sails-postgresql": "^0.10.16",
     "underscore": "^1.8.3",
     "uuid": "^2.0.1"
+  },
+  "devDependencies": {
+    "sql-fixtures": "^0.11.0"
   }
 }
