--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "knex": "^0.8.6",
     "lab": "^6.1.0",
     "lodash": "^3.10.1",
+    "node-uuid": "^1.4.3",
     "pg": "^4.4.1",
     "require-all": "^1.1.0",
     "sails-postgresql": "^0.10.16",
