Update components to new react version

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "babel-eslint": "^4.0.5",
     "babel-runtime": "^5.8.20",
     "bootstrap": "^3.3.5",
+    "classnames": "^2.2.0",
     "eslint": "^1.1.0",
     "eslint-plugin-react": "^3.2.2",
     "flux": "^2.0.3",
@@ -42,11 +43,10 @@
     "history": "^1.9.1",
     "jwt-decode": "^1.1.0",
     "lodash": "^3.10.1",
-    "material-ui": "^0.12.3",
     "object-assign": "^3.0.0",
     "react": "^0.14.0",
-    "react-bootstrap": "^0.24.5",
     "react-dnd": "^2.0.2",
+    "react-dnd-html5-backend": "^2.0.0",
     "react-kendo": "^0.13.11",
     "react-mixin": "^3.0.0",
     "react-router": "^1.0.0-rc3",
