--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,38 +6,39 @@
   "private": true,
   "main": "./src/index.js",
   "devDependencies": {
-      "autoprefixer": "^6.0.3",
-      "babel": "^5.8.23",
-      "babel-eslint": "^4.1.3",
-      "babel-jscs": "^2.0.4",
-      "babel-loader": "^5.3.2",
-      "babel-plugin-react-transform": "^1.0.5",
-      "chai": "^3.2.0",
-      "css-loader": "^0.19.0",
-      "eslint": "^1.5.0",
-      "eslint-plugin-react": "^3.4.2",
-      "express": "^4.13.3",
-      "extract-text-webpack-plugin": "^0.8.2",
-      "file-loader": "^0.8.4",
-      "html-webpack-plugin": "^1.6.1",
-      "jscs": "^2.1.1",
-      "jsdom": "^6.5.1",
-      "json-loader": "^0.5.3",
-      "mocha": "^2.3.3",
-      "mocha-jsdom": "^1.0.0",
-      "postcss-loader": "^0.6.0",
-      "react-addons-test-utils": "0.14.0-rc1",
-      "react-hot-loader": "^1.3.0",
-      "react-transform-hmr": "^1.0.0",
-      "rimraf": "^2.4.3",
-      "sinon": "^1.16.1",
-      "sinon-chai": "^2.8.0",
-      "stats-webpack-plugin": "^0.2.1",
-      "style-loader": "^0.12.4",
-      "url-loader": "^0.5.6",
-      "webpack": "^1.12.2",
-      "webpack-dev-middleware": "^1.2.0",
-      "webpack-hot-middleware": "^2.2.0"
+    "autoprefixer": "^6.0.3",
+    "babel": "^5.8.23",
+    "babel-eslint": "^4.1.3",
+    "babel-jscs": "^2.0.4",
+    "babel-loader": "^5.3.2",
+    "babel-plugin-react-transform": "^1.0.5",
+    "chai": "^3.2.0",
+    "css-loader": "^0.19.0",
+    "eslint": "^1.5.0",
+    "eslint-plugin-react": "^3.4.2",
+    "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
+    "html-webpack-plugin": "^1.6.1",
+    "jscs": "^2.1.1",
+    "jsdom": "^6.5.1",
+    "json-loader": "^0.5.3",
+    "mocha": "^2.3.3",
+    "mocha-jsdom": "^1.0.0",
+    "postcss-loader": "^0.6.0",
+    "react-addons-test-utils": "0.14.0-rc1",
+    "react-hot-loader": "^1.3.0",
+    "react-transform-hmr": "^1.0.0",
+    "rimraf": "^2.4.3",
+    "sass-loader": "^3.1.1",
+    "sinon": "^1.16.1",
+    "sinon-chai": "^2.8.0",
+    "stats-webpack-plugin": "^0.2.1",
+    "style-loader": "^0.12.4",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.2.0"
   },
   "scripts": {
     "dev": "",
@@ -52,12 +53,15 @@
     "eslint": "^1.1.0",
     "eslint-plugin-react": "^3.2.2",
     "flux": "^2.0.3",
+    "font-awesome": "^4.4.0",
     "gulp-connect": "^2.2.0",
     "gulp-cssnext": "^1.0.1",
     "history": "^1.9.1",
     "jwt-decode": "^1.1.0",
     "lodash": "^3.10.1",
+    "normalize.css": "^3.0.3",
     "object-assign": "^3.0.0",
+    "purecss": "^0.6.0",
     "react": "^0.14.0",
     "react-dnd": "^2.0.2",
     "react-dnd-html5-backend": "^2.0.0",
