--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "json-loader": "^0.5.3",
     "mocha": "^2.3.3",
     "mocha-jsdom": "^1.0.0",
+    "node-sass": "^3.4.1",
     "postcss-loader": "^0.6.0",
     "react-addons-test-utils": "0.14.0-rc1",
     "react-hot-loader": "^1.3.0",
