--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "babel-runtime": "^5.8.20",
     "bootstrap": "^3.3.5",
     "classnames": "^2.2.0",
+    "deepmerge": "^0.2.10",
     "eslint": "^1.1.0",
     "eslint-plugin-react": "^3.2.2",
     "flux": "^2.0.3",
